--- a/home/styles.css
+++ b/home/styles.css
@@ -1,3 +1,69 @@
+:root {
+    font-size: 16px;
+}
+
+/* Main body style */
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-image: url("/static/index/background-image-blue-dark-blue-backgrounds-textures-536dcc-1024.jpg");
+    background-attachment: fixed;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #f0f0f0;
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    min-height: 100vh;
+    padding-top: 6rem;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 0;
+    gap: 2rem;
+    margin: auto;
+    flex-wrap: nowrap;
+    width: 100%;
+    height: 100vh;
+    box-sizing: border-box;
+}
+
+.main-panel {
+    flex: 1; /* Takes up the remaining space */
+    overflow-y: auto; /* Enables vertical scrolling */
+    background-color: #fff; /* Example background color */
+    padding: 1rem;
+    box-sizing: border-box;
+    height: 100%; /* Full height to match the viewport */
+}
+
+.banner {
+    display: block;
+    width: 100%;
+    height: 10rem;
+}
+
+.banner-gradient {
+    display: block;
+    width: 100%;
+    height: 10rem;
+    background: linear-gradient(to right, #00aaff, #ff007f);
+}
+
+.divisor {
+    display: flex;
+    width: 90%;
+    border: 0;
+    border-top: 10px solid #c9b24c;
+    margin: 20px auto;
+}
+
 /* Main navigation bar */
 nav {
     width: 100%;
@@ -93,11 +159,11 @@ nav ul li:hover .dropdown {
 }
 
 .profile {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
-    margin-right: 5rem;
+    flex: 0 0 25%; /* Fixes the profile section width at 25% */
+    max-width: 25%; /* Prevents the profile section from growing too much */
+    background-color: #f5f5f5; /* Example background color */
+    padding: 1rem;
+    box-sizing: border-box;
 }
 
 .profile-image {
