--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     font-size: 16px;
     --primary-color: #333; /* Dark gray for text */
     --secondary-color: #555; /* Lighter gray for accents */
-    --background-color: #f9f9f9; /* Light background */
+    --background-color: #d9e1e9; /* Light background */
     --highlight-color: #0073e6; /* Blue for highlights */
     --highlight-hover: #005bb5; /* Darker blue for hover effects */
     --card-background: #ffffff; /* White for cards */
@@ -29,7 +29,7 @@ body {
 /* Navigation bar */
 nav {
     width: 100%;
-    background-color: #ffffff;
+    background-color: #c0d7ee;
     position: fixed;
     top: 0;
     left: 0;
@@ -150,13 +150,13 @@ nav ul li:hover .dropdown {
 .profile-contacts a img {
     width: 32px;
     height: 32px;
-    filter: grayscale(100%);
-    transition: filter 0.2s ease;
+    filter: grayscale(0%);
 }
 
 /* Contact icons hover effect */
 .profile-contacts a:hover img {
-    filter: grayscale(0%);
+    filter: grayscale(100%);
+    transition: filter 0.2s ease;
 }
 
 /* Article section */
